update links so they work in github pages

--- a/clinical/htmlFiles/aortofemoral2.html
+++ b/clinical/htmlFiles/aortofemoral2.html
@@ -150,19 +150,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="sec1">
-        <zero-md class="embedMath" src="/clinical/aortofemoral2/_significance.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral2/_significance.md" no-shadow></zero-md>
       </span>
       <span id="sec2">
-        <zero-md class="embedMath" src="/clinical/aortofemoral2/_data.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral2/_data.md" no-shadow></zero-md>
       </span>
       <span id="sec3">
-        <zero-md class="embedMath" src="/clinical/aortofemoral2/_description.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral2/_description.md" no-shadow></zero-md>
       </span>
       <span id="sec4">
-        <zero-md class="embedMath" src="/clinical/aortofemoral2/_boundary.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral2/_boundary.md" no-shadow></zero-md>
       </span>
       <span id="sec5">
-        <zero-md class="embedMath" src="/clinical/aortofemoral2/_results.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral2/_results.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
