--- a/clinical/htmlFiles/coronary.html
+++ b/clinical/htmlFiles/coronary.html
@@ -165,46 +165,46 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="/clinical/coronary/_introduction.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_introduction.md" no-shadow></zero-md>
       </span>
       <span id="anatomy_and_image">
-        <zero-md class="embedMath" src="/clinical/coronary/_anatomy_and_image_data.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_anatomy_and_image_data.md" no-shadow></zero-md>
       </span>
       <span id="model">
-        <zero-md class="embedMath" src="/clinical/coronary/_model_construction_and_meshing.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_model_construction_and_meshing.md" no-shadow></zero-md>
       </span>
       <span id="sim">
-        <zero-md class="embedMath" src="/clinical/coronary/_coronary_simulation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_coronary_simulation.md" no-shadow></zero-md>
       </span>
       <span id="inflow_bc">
-        <zero-md class="embedMath" src="/clinical/coronary/_inflow_bc.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_inflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="aortic_bc">
-        <zero-md class="embedMath" src="/clinical/coronary/_aortic_outflow_bc.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_aortic_outflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="coronary_bc">
-        <zero-md class="embedMath" src="/clinical/coronary/_coronary_outflow_bc.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_coronary_outflow_bc.md" no-shadow></zero-md>
       </span>
       <span id="parameter_selection">
-        <zero-md class="embedMath" src="/clinical/coronary/_parameter_selection.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_parameter_selection.md" no-shadow></zero-md>
       </span>
       <span id="wall_properties">
-        <zero-md class="embedMath" src="/clinical/coronary/_wall_properties.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_wall_properties.md" no-shadow></zero-md>
       </span>
       <span id="solver_params">
-        <zero-md class="embedMath" src="/clinical/coronary/_solver_parameters.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_solver_parameters.md" no-shadow></zero-md>
       </span>
       <span id="run_job">
-        <zero-md class="embedMath" src="/clinical/coronary/_run_job.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_run_job.md" no-shadow></zero-md>
       </span>
       <span id="results">
-        <zero-md class="embedMath" src="/clinical/coronary/_simulation_results.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_simulation_results.md" no-shadow></zero-md>
       </span>
       <span id="conclusion">
-        <zero-md class="embedMath" src="/clinical/coronary/_conclusion.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_conclusion.md" no-shadow></zero-md>
       </span>
       <span id="references">
-        <zero-md class="embedMath" src="/clinical/coronary/_references.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../coronary/_references.md" no-shadow></zero-md>
       </span>
 
 
