--- a/documentation/htmlFiles/genbc.html
+++ b/documentation/htmlFiles/genbc.html
@@ -141,19 +141,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="/documentation/genbc/_introduction.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../genbc/_introduction.md" no-shadow></zero-md>
       </span>
       <span id="sv_prep">
-        <zero-md class="embedMath" src="/documentation/genbc/_sv_prep.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../genbc/_sv_prep.md" no-shadow></zero-md>
       </span>
       <span id="genbc_setup">
-        <zero-md class="embedMath" src="/documentation/genbc/_genbc_setup.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../genbc/_genbc_setup.md" no-shadow></zero-md>
       </span>
       <span id="final_steps">
-        <zero-md class="embedMath" src="/documentation/genbc/_final_steps.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../genbc/_final_steps.md" no-shadow></zero-md>
       </span>
       <span id="pressure_waveform">
-        <zero-md class="embedMath" src="/documentation/genbc/_pressure_waveform.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../genbc/_pressure_waveform.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
