--- a/documentation/htmlFiles/meshing.html
+++ b/documentation/htmlFiles/meshing.html
@@ -156,46 +156,46 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="/documentation/meshing/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_intro.md" no-shadow></zero-md>
       </span>
       <span id="tetgenoverview">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenOverview.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenOverview.md" no-shadow></zero-md>
       </span>
       <span id="tetgencreatemesh">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenCreateMesh.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenCreateMesh.md" no-shadow></zero-md>
       </span>
       <span id="tetgeniso">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenIsotropicMeshing.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenIsotropicMeshing.md" no-shadow></zero-md>
       </span>
       <span id="tetgenboundarylayer">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenBoundaryLayer.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenBoundaryLayer.md" no-shadow></zero-md>
       </span>
       <span id="tetgetnradiusbased">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenRadiusBasedMeshing.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenRadiusBasedMeshing.md" no-shadow></zero-md>
       </span>
       <span id="tetgenlocalmeshing">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenLocalSize.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenLocalSize.md" no-shadow></zero-md>
       </span>
       <span id="tetgensphericalrefinement">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenSphereRefinement.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenSphereRefinement.md" no-shadow></zero-md>
       </span>
       <span id="tetgenflags">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenFlags.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenFlags.md" no-shadow></zero-md>
       </span>
       <span id="tetgenadapt">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenAdapt.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenAdapt.md" no-shadow></zero-md>
       </span>
       <span id="loadingmesh">
-        <zero-md class="embedMath" src="/documentation/meshing/_loadingmesh.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_loadingmesh.md" no-shadow></zero-md>
       </span>
       <span id="exportingmesh">
-        <zero-md class="embedMath" src="/documentation/meshing/_exportingMesh.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_exportingMesh.md" no-shadow></zero-md>
       </span>
       <span id="tetgenerrors">
-        <zero-md class="embedMath" src="/documentation/meshing/_tetgenErrors.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_tetgenErrors.md" no-shadow></zero-md>
       </span>
       <span id="inspectingmeshes">
-        <zero-md class="embedMath" src="/documentation/meshing/_inspectingMeshes.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../meshing/_inspectingMeshes.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
