--- a/documentation/htmlFiles/modeling.html
+++ b/documentation/htmlFiles/modeling.html
@@ -176,76 +176,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="modelingIntro">
-        <zero-md class="embedMath" src="/documentation/modeling/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_intro.md" no-shadow></zero-md>
       </span>
       <span id="modelingPathPlanning">
-        <zero-md class="embedMath" src="/documentation/modeling/_pathPlanning.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_pathPlanning.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingPath">
-        <zero-md class="embedMath" src="/documentation/modeling/_creatingPath.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_creatingPath.md" no-shadow></zero-md>
       </span>
       <span id="modelingSmoothingPath">
-        <zero-md class="embedMath" src="/documentation/modeling/_smoothingPath.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_smoothingPath.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingPaths">
-        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingPaths.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_importingExportingPaths.md" no-shadow></zero-md>
       </span>
       <span id="modelingSegmentation">
-        <zero-md class="embedMath" src="/documentation/modeling/_segmentation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_segmentation.md" no-shadow></zero-md>
       </span>
       <span id="modelingUsingGroups">
-        <zero-md class="embedMath" src="/documentation/modeling/_usingGroups.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_usingGroups.md" no-shadow></zero-md>
       </span>
       <span id="modelingThresholding">
-        <zero-md class="embedMath" src="/documentation/modeling/_thresholding.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_thresholding.md" no-shadow></zero-md>
       </span>
       <span id="modelingLevelSet">
-        <zero-md class="embedMath" src="/documentation/modeling/_levelSet.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_levelSet.md" no-shadow></zero-md>
       </span>
       <span id="modelingMachineLearning">
-        <zero-md class="embedMath" src="/documentation/modeling/_machinelearning.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_machinelearning.md" no-shadow></zero-md>
       </span>
       <span id="modelingManual">
-        <zero-md class="embedMath" src="/documentation/modeling/_manual.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_manual.md" no-shadow></zero-md>
       </span>
       <span id="modeling3DSeg">
-        <zero-md class="embedMath" src="/documentation/modeling/_3DSeg.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_3DSeg.md" no-shadow></zero-md>
       </span>
       <span id="modelingCopyingPastingContours">
-        <zero-md class="embedMath" src="/documentation/modeling/_copyingPastingContours.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_copyingPastingContours.md" no-shadow></zero-md>
       </span>
       <span id="modelingLoftingPreview">
-        <zero-md class="embedMath" src="/documentation/modeling/_loftingpreview.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_loftingpreview.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingGroups">
-        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingGroups.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_importingExportingGroups.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingPolyData">
-        <zero-md class="embedMath" src="/documentation/modeling/_solidModelingPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_solidModelingPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsPolyData">
-        <zero-md class="embedMath" src="/documentation/modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_creatingModelsPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingPolyDataFaces">
-        <zero-md class="embedMath" src="/documentation/modeling/_polyDataFaces.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_polyDataFaces.md" no-shadow></zero-md>
       </span>
       <span id="modelingEditingPolyData">
-        <zero-md class="embedMath" src="/documentation/modeling/_editingPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_editingPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingCenterlinesPolyData">
-        <zero-md class="embedMath" src="/documentation/modeling/_centerlinesPolyData.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_centerlinesPolyData.md" no-shadow></zero-md>
       </span>
       <span id="modelingImportingExportingModels">
-        <zero-md class="embedMath" src="/documentation/modeling/_importingExportingModels.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_importingExportingModels.md" no-shadow></zero-md>
       </span>
       <span id="modelingSolidModelingAnalytic">
-        <zero-md class="embedMath" src="/documentation/modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_solidModelingAnalytic.md" no-shadow></zero-md>
       </span>
       <span id="modelingCreatingModelsAnalytic">
-        <zero-md class="embedMath" src="/documentation/modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_creatingModelsAnalytic.md" no-shadow></zero-md>
       </span>
       <span id="modelingBlendingAnalytic">
-        <zero-md class="embedMath" src="/documentation/modeling/_blendingAnalytic.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../modeling/_blendingAnalytic.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
