--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -158,76 +158,76 @@
 
     <section class="docsSection" style="float: right">
       <span id="getting_started">
-        <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
+        <zero-md src="../quickguide/_getting_started.md"></zero-md>
       </span>
       <span id="introduction">
-        <zero-md src="/documentation/quickguide/_intro.md"></zero-md>
+        <zero-md src="../quickguide/_intro.md"></zero-md>
       </span>
       <span id="intro_pipeline">
-        <zero-md src="/documentation/quickguide/_intro_pipeline.md"></zero-md>
+        <zero-md src="../quickguide/_intro_pipeline.md"></zero-md>
       </span>
       <span id="intro_tools">
-        <zero-md src="/documentation/quickguide/_intro_tools.md"></zero-md>
+        <zero-md src="../quickguide/_intro_tools.md"></zero-md>
       </span>
       <span id="intro_projects">
-        <zero-md src="/documentation/quickguide/_intro_projects.md"></zero-md>
+        <zero-md src="../quickguide/_intro_projects.md"></zero-md>
       </span>
       <span id="intro_mitk">
-        <zero-md src="/documentation/quickguide/_intro_mitk.md"></zero-md>
+        <zero-md src="../quickguide/_intro_mitk.md"></zero-md>
       </span>
       <span id="gui">
-        <zero-md src="/documentation/quickguide/gui/_intro.md"></zero-md>
+        <zero-md src="../quickguide/gui/_intro.md"></zero-md>
       </span>
       <span id="menubar">
-        <zero-md src="/documentation/quickguide/gui/_menubar.md"></zero-md>
+        <zero-md src="../quickguide/gui/_menubar.md"></zero-md>
       </span>
       <span id="toolbar">
-        <zero-md src="/documentation/quickguide/gui/_toolbar.md"></zero-md>
+        <zero-md src="../quickguide/gui/_toolbar.md"></zero-md>
       </span>
       <span id="gui_display">
-        <zero-md src="/documentation/quickguide/gui/_display.md"></zero-md>
+        <zero-md src="../quickguide/gui/_display.md"></zero-md>
       </span>
       <span id="image_windowing">
-        <zero-md src="/documentation/quickguide/gui/_image_windowing.md"></zero-md>
+        <zero-md src="../quickguide/gui/_image_windowing.md"></zero-md>
       </span>
       <span id="gui_data_manager">
-        <zero-md src="/documentation/quickguide/gui/_data_manager.md"></zero-md>
+        <zero-md src="../quickguide/gui/_data_manager.md"></zero-md>
       </span>
       <span id="gui_tool_panel">
-        <zero-md src="/documentation/quickguide/gui/_tool_panel.md"></zero-md>
+        <zero-md src="../quickguide/gui/_tool_panel.md"></zero-md>
       </span>
       <span id="gui_image_navigator">
-        <zero-md src="/documentation/quickguide/gui/_image_navigator.md"></zero-md>
+        <zero-md src="../quickguide/gui/_image_navigator.md"></zero-md>
       </span>
       <span id="tutorial">
-        <zero-md src="/documentation/quickguide/tutorial/_intro.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_intro.md"></zero-md>
       </span>
       <span id="tutorial_starting_simvascular">
-        <zero-md src="/documentation/quickguide/tutorial/_starting_simvascular.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_starting_simvascular.md"></zero-md>
       </span>
       <span id="tutorial_create_project">
-        <zero-md src="/documentation/quickguide/tutorial/_create_project.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_project.md"></zero-md>
       </span>
       <span id="tutorial_add_image_data">
-        <zero-md src="/documentation/quickguide/tutorial/_add_image_data.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_add_image_data.md"></zero-md>
       </span>
       <span id="tutorial_create_paths">
-        <zero-md src="/documentation/quickguide/tutorial/_create_paths.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_paths.md"></zero-md>
       </span>
       <span id="tutorial_create_segmentations">
-        <zero-md src="/documentation/quickguide/tutorial/_create_segmentations.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_segmentations.md"></zero-md>
       </span>
       <span id="tutorial_create_solid_model">
-        <zero-md src="/documentation/quickguide/tutorial/_create_solid_model.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_solid_model.md"></zero-md>
       </span>
       <span id="tutorial_create_finite_element_mesh">
-        <zero-md src="/documentation/quickguide/tutorial/_create_finite_element_mesh.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_finite_element_mesh.md"></zero-md>
       </span>
       <span id="tutorial_create_simulation">
-        <zero-md src="/documentation/quickguide/tutorial/_create_simulation.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_create_simulation.md"></zero-md>
       </span>
       <span id="tutorial_summary">
-        <zero-md src="/documentation/quickguide/tutorial/_summary.md"></zero-md>
+        <zero-md src="../quickguide/tutorial/_summary.md"></zero-md>
       </span>
     </section>
   </section>
