--- a/documentation/htmlFiles/references.html
+++ b/documentation/htmlFiles/references.html
@@ -146,34 +146,34 @@
 
     <section class="docsSection" style="float: right">
       <span id="refSec1">
-        <zero-md class="embedMath" src="/documentation/references/_flowsolver.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_flowsolver.md" no-shadow></zero-md>
       </span>
       <span id="refSec2">
-        <zero-md class="embedMath" src="/documentation/references/_bc.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_bc.md" no-shadow></zero-md>
       </span>
       <span id="refSec3">
-        <zero-md class="embedMath" src="/documentation/references/_linsolver.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_linsolver.md" no-shadow></zero-md>
       </span>
       <span id="FSI">
-        <zero-md class="embedMath" src="/documentation/references/_fsi.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_fsi.md" no-shadow></zero-md>
       </span>
       <span id="refSec4">
-        <zero-md class="embedMath" src="/documentation/references/_modeling.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_modeling.md" no-shadow></zero-md>
       </span>
       <span id="refSec5">
-        <zero-md class="embedMath" src="/documentation/references/_meshing.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_meshing.md" no-shadow></zero-md>
       </span>
       <span id="refSec6">
-        <zero-md class="embedMath" src="/documentation/references/_validation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_validation.md" no-shadow></zero-md>
       </span>
       <span id="refSec7">
-        <zero-md class="embedMath" src="/documentation/references/_clinicalapps.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_clinicalapps.md" no-shadow></zero-md>
       </span>
       <span id="UQ">
-        <zero-md class="embedMath" src="/documentation/references/_uq.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_uq.md" no-shadow></zero-md>
       </span>
       <span id="refSec8">
-        <zero-md class="embedMath" src="/documentation/references/_othercontributors.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../references/_othercontributors.md" no-shadow></zero-md>
       </span>      
     </section>
   </section>
