--- a/documentation/htmlFiles/svfsi.html
+++ b/documentation/htmlFiles/svfsi.html
@@ -160,34 +160,34 @@
 
     <section class="docsSection" style="float: right">
       <span id="introduction">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_intro.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_intro.md" no-shadow></zero-md>
       </span>
       <span id="feature">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_feature.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_feature.md" no-shadow></zero-md>
       </span>
       <span id="input">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_input.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_input.md" no-shadow></zero-md>
       </span>
       <span id="mesh">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_mesh.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_mesh.md" no-shadow></zero-md>
       </span>
       <span id="run">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_run_simulation.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_run_simulation.md" no-shadow></zero-md>
       </span>
       <span id="resource">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_resource.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_resource.md" no-shadow></zero-md>
       </span>
       <span id="install">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_install.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_install.md" no-shadow></zero-md>
       </span>
       <span id="installer">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_install_installer.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_install_installer.md" no-shadow></zero-md>
       </span>
       <span id="container">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_install_container.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_install_container.md" no-shadow></zero-md>
       </span>
       <span id="source">
-        <zero-md class="embedMath" src="/documentation/svfsi/main/_install_source.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../svfsi/main/_install_source.md" no-shadow></zero-md>
       </span>
     
     </section>
