--- a/clinical/htmlFiles/aortofemoral1.html
+++ b/clinical/htmlFiles/aortofemoral1.html
@@ -150,19 +150,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="sec1">
-        <zero-md class="embedMath" src="/clinical/aortofemoral1/_significance.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral1/_significance.md" no-shadow></zero-md>
       </span>
       <span id="sec2">
-        <zero-md class="embedMath" src="/clinical/aortofemoral1/_data.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral1/_data.md" no-shadow></zero-md>
       </span>
       <span id="sec3">
-        <zero-md class="embedMath" src="/clinical/aortofemoral1/_description.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral1/_description.md" no-shadow></zero-md>
       </span>
       <span id="sec4">
-        <zero-md class="embedMath" src="/clinical/aortofemoral1/_boundary.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral1/_boundary.md" no-shadow></zero-md>
       </span>
       <span id="sec5">
-        <zero-md class="embedMath" src="/clinical/aortofemoral1/_results.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../aortofemoral1/_results.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
