--- a/clinical/htmlFiles/pulmonary.html
+++ b/clinical/htmlFiles/pulmonary.html
@@ -150,19 +150,19 @@
 
     <section class="docsSection" style="float: right">
       <span id="sec1">
-        <zero-md class="embedMath" src="/clinical/pulmonary/_significance.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../pulmonary/_significance.md" no-shadow></zero-md>
       </span>
       <span id="sec2">
-        <zero-md class="embedMath" src="/clinical/pulmonary/_data.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../pulmonary/_data.md" no-shadow></zero-md>
       </span>
       <span id="sec3">
-        <zero-md class="embedMath" src="/clinical/pulmonary/_description.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../pulmonary/_description.md" no-shadow></zero-md>
       </span>
       <span id="sec4">
-        <zero-md class="embedMath" src="/clinical/pulmonary/_boundary.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../pulmonary/_boundary.md" no-shadow></zero-md>
       </span>
       <span id="sec5">
-        <zero-md class="embedMath" src="/clinical/pulmonary/_results.md" no-shadow></zero-md>
+        <zero-md class="embedMath" src="../pulmonary/_results.md" no-shadow></zero-md>
       </span>
     </section>
   </section>
