trying different combinations

--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -158,25 +158,25 @@
 
     <section class="docsSection" style="float: right">
       <span id="getting_started">
-        <zero-md src="/documentation/quickguide/_getting_started.md"></zero-md>
+        <zero-md src=/documentation/quickguide/_getting_started.md></zero-md>
       </span>
       <span id="introduction">
-        <zero-md src="/documentation/quickguide/_intro.md"></zero-md>
+        <zero-md src="../documentation/quickguide/_intro.md"></zero-md>
       </span>
       <span id="intro_pipeline">
-        <zero-md src="/documentation/quickguide/_intro_pipeline.md"></zero-md>
+        <zero-md src=../documentation/quickguide/_intro_pipeline.md></zero-md>
       </span>
       <span id="intro_tools">
-        <zero-md src="/documentation/quickguide/_intro_tools.md"></zero-md>
+        <zero-md src="/quickguide/_intro_tools.md"></zero-md>
       </span>
       <span id="intro_projects">
-        <zero-md src="/documentation/quickguide/_intro_projects.md"></zero-md>
+        <zero-md src=/quickguide/_intro_projects.md></zero-md>
       </span>
       <span id="intro_mitk">
-        <zero-md src="/documentation/quickguide/_intro_mitk.md"></zero-md>
+        <zero-md src=../quickguide/_intro_mitk.md></zero-md>
       </span>
       <span id="gui">
-        <zero-md src="/documentation/quickguide/gui/_intro.md"></zero-md>
+        <zero-md src="../quickguide/gui/_intro.md"></zero-md>
       </span>
       <span id="menubar">
         <zero-md src="/documentation/quickguide/gui/_menubar.md"></zero-md>
