--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -158,7 +158,7 @@
 
     <section class="docsSection" style="float: right">
       <span id="getting_started">
-        <zero-md src=/documentation/quickguide/_getting_started.md></zero-md>
+        <zero-md src="../../documentation/quickguide/_getting_started.md"></zero-md>
       </span>
       <span id="introduction">
         <zero-md src="../documentation/quickguide/_intro.md"></zero-md>
