minor changes: link in logo and skipToTop in index

--- a/index.html
+++ b/index.html
@@ -33,15 +33,10 @@
       <div>
         <i class="fa-solid fa-bars" id="iconForSkip"></i>
       </div>
-      <nav id="navElement">
+        <nav id="navElement">
         <!-- <div class="navBarRow rowFormat"> -->
           <div id="navigationSection">
             <table id="contentOfSkip">
-                <tr id="skipToHome">
-                  <th>
-                    <p class="skipItem">Skip to Top</p>
-                  </th>
-                </tr>
                 <tr id="skipToFeatures">
                   <th>
                     <p class="skipItem">Features</p>
@@ -100,7 +95,7 @@
     </div>
     <div class="topLeftLogo">      
       <div class="headerLogoContainer">
-        <img class="headerLogoImage" src="img/svLogoTitle.png" alt="SimVascular Logo"></img>
+        <img id="logo" class="headerLogoImage" src="/img/svLogoTitle.png" alt="SimVascular Logo"></img>
       </div>
     </div>
   </section>
@@ -620,6 +615,9 @@
       <h5 class="innerCopyright">Copyright © SimVascular Development Team - 2023</h5>
   </div>
   </div>
+  </section>
+  <section class="skipToTopSection">
+    <p id="skipToTop"><i class="fa-solid fa-arrow-up"></i></p>
   </section>
     
     
