download project link in documentation

--- a/clinical/htmlFiles/aortofemoral2.html
+++ b/clinical/htmlFiles/aortofemoral2.html
@@ -129,6 +129,13 @@
   <section class="mainSection">
     <section class="navigationSection" style="float: left">
       <div>
+        <h3>Download</h3>
+          <h4 class="clickLink https://simtk.org/frs/download_confirm.php/file/4301/AortofemoralNormal2.zip?group_id=930">Aortofemoral Normal - 2 (Data)</h4>
+      </div>
+      <div style="padding: 0">
+        <h3>Aortofemoral Normal</h3>
+      </div>
+      <div>
         <h4 class="skipTo sec1">Clinical Significance</h4>
       </div>
       <div>
