--- a/documentation/htmlFiles/flowsolver.html
+++ b/documentation/htmlFiles/flowsolver.html
@@ -131,6 +131,13 @@
   <section class="mainSection">
     <section class="navigationSection" style="float: left">
       <div>
+        <h3>Download</h3>
+          <h4 class="clickLink https://simtk.org/frs/download_confirm.php/file/5114/CylinderProject.zip?group_id=930">Cylinder Example Project</h4>
+      </div>
+      <div style="padding: 0">
+        <h3>Simulation Guide</h3>
+      </div>
+      <div>
         <h4 class="skipTo introduction">Introduction</h4>
       </div>
       <div>
