--- a/documentation/htmlFiles/quickguide.html
+++ b/documentation/htmlFiles/quickguide.html
@@ -121,8 +121,8 @@
     <section class="navigationSection" style="float: left">
       <div>
         <h3>Download</h3>
-          <h4 class="clickLink ">Demo Project</h4>
-          <h4 class="clickLink ">Tutorial</h4>
+          <h4 class="clickLink https://simtk.org/frs/download_confirm.php/file/5113/DemoProject.zip?group_id=930">Demo Project</h4>
+          <h4 class="clickLink https://simtk.org/frs/download_confirm.php/latestzip/2256/SimVascularTutorialProject-latest.zip?group_id=930">Tutorial</h4>
       </div>
       <div style="padding: 0">
         <h3>Getting Started</h3>
